--- a/app/players/players.css
+++ b/app/players/players.css
@@ -1,3 +1,4 @@
-.player-list .row-player {
+.player-list .row-player,
+.player-list .row-info  {
   grid-template-columns: 50px 1fr repeat(7, 100px);
 }
